Closed
Bug 171509
Opened 23 years ago
Closed 22 years ago
mozilla attempts to convert profiles from empty .netscape and .netscape6 dirs
Categories
(Core Graveyard :: Profile: BackEnd, defect)
Tracking
(Not tracked)
RESOLVED
FIXED
mozilla1.6beta
People
(Reporter: u32858, Assigned: Biesinger)
Details
Attachments
(1 file, 1 obsolete file)
|
2.47 KB,
patch
|
ccarlen
:
review+
tor
:
superreview+
|
Details | Diff | Splinter Review |
User-Agent: Mozilla/5.0 (X11; U; Linux i686; en-US; rv:1.1) Gecko/20020826
Build Identifier: Mozilla/5.0 (X11; U; Linux i686; en-US; rv:1.1) Gecko/20020826
when ever i start a fresh install the profile manager believes there is a
netscape 4 profile to convert from as these dirs exisit
Reproducible: Always
Steps to Reproduce:
1.ls -al
2..netscape and .netscape6 dirs are there, empty
3.
Actual Results:
.netscape and .netscape6 dirs are there, empty
Expected Results:
They do not seem to be necesary, and cause problems
Comment 1•23 years ago
|
||
Those directories were there before running the installer. Then the installer
thinks by finding a .netscape directory (it does not care about .netscape6) that
there is an old netscape4 profile.
Reporter, can you please try to remove the empty .netscape directory and see if
the still installer asks to convert the profile or creates that directory itself?
Otherwise, the only issue I see here is that the installer asks to convert an
empty directory.
Assignee: asa → dveditz
Component: Browser-General → Installer
QA Contact: asa → bugzilla
Comment 2•23 years ago
|
||
Why would you have those directories around, empty, anyway? Confirming.
Status: UNCONFIRMED → NEW
Component: Installer → Profile Manager BackEnd
Ever confirmed: true
Summary: mozilla creates .netsccape and .netscape6 dirs → mozilla attempts to convert profiles from empty .netscape and .netscape6 dirs
I dont know
Mandrake does not even come with netscape rpms but it still had those dirs,
i think they must be created by mozilla
JG
Comment 4•23 years ago
|
||
I also have the directories although I do have NS4 installed and use it
occaisonally. I rename the .netscape dir and removed the .netscape6 directory
and then
1. ran the installer (but prevented it from bringing up Mozilla afterwards)
2. ran Mozilla with an old profile
3. ran Mozilla with "-installer" to force it to try to migrate an old profile
None of these steps created a .netscape or .netscape6 directory. The
directories are either create by something else or an older version of Mozilla
The profile manager thinks there is an NS4 profile to convert even if there is
no .netscape directory.
reassign for real
Assignee: dveditz → ccarlen
QA Contact: bugzilla → ktrina
Comment 5•23 years ago
|
||
I get something similar:
1> Remove both Mozilla & Netscape.
2> Install Mozilla, run Mozilla, set up a profile.
3> Run Netscape.
4> Now you're hosed. Mozilla will destroy it's own profile when Netscape starts.
| Assignee | ||
Comment 6•22 years ago
|
||
per the summary of this bug, it is about an empty .netscape directory confusing
mozilla. this patch fixes that, it verifies that preferences.js exists in that
directory before attempting to convert a profile from there.
| Assignee | ||
Updated•22 years ago
|
Attachment #134156 -
Flags: review?(ccarlen)
| Assignee | ||
Updated•22 years ago
|
Status: NEW → ASSIGNED
Target Milestone: --- → mozilla1.6beta
Comment 8•22 years ago
|
||
https://bugzilla.redhat.com/bugzilla/show_bug.cgi?id=104205
Mozilla does not care about .netscape6, but an empty .netscape does cause this
problem.
.netscape/plugins
.netscape6/plugins
Both of these empty directories are created by all versions of OpenOffice and
StarOffice known to date. Mozilla does not create them.
Christian's patch seems to work exactly how I expect it. Would Netscape 4.x's
preferences.js be the proper file to test existence?
Comment 9•22 years ago
|
||
I think the patch is right. While you're there, though, it would be nice to get
rid of the nsIFileSpec usage. We start with a string and eventually want an
nsILocalFile. Why have an nsIFileSpec along the way?
| Assignee | ||
Comment 10•22 years ago
|
||
Comment on attachment 134156 [details] [diff] [review]
patch
oh, you're right. I thought that code later in this function needed this
nsIFileSpec. will update this patch.
Attachment #134156 -
Flags: review?(ccarlen) → review-
| Assignee | ||
Comment 11•22 years ago
|
||
Attachment #134156 -
Attachment is obsolete: true
| Assignee | ||
Updated•22 years ago
|
Attachment #134303 -
Flags: review?(ccarlen)
Comment 12•22 years ago
|
||
Comment on attachment 134303 [details] [diff] [review]
patch v2
r=ccarlen
Attachment #134303 -
Flags: review?(ccarlen) → review+
| Assignee | ||
Updated•22 years ago
|
Attachment #134303 -
Flags: superreview?(tor)
Attachment #134303 -
Flags: superreview?(tor) → superreview+
| Assignee | ||
Comment 13•22 years ago
|
||
Checking in nsProfileAccess.cpp;
/cvsroot/mozilla/profile/src/nsProfileAccess.cpp,v <-- nsProfileAccess.cpp
new revision: 1.84; previous revision: 1.83
done
Status: ASSIGNED → RESOLVED
Closed: 22 years ago
Resolution: --- → FIXED
Updated•10 years ago
|
Product: Core → Core Graveyard
You need to log in
before you can comment on or make changes to this bug.
Description
•