Bug 171509       mozilla attempts to convert profiles from empty .netscape dir fix this by checking if preferences.js exists in ~/.netscape r=ccarlen sr=tor